testsuite/tests/parser/unicode/utf8_004.stderr

utf8_004.hs:2:1: error: [GHC-21231]
    lexical error (UTF-8 decoding error)
