testsuite/tests/parser/unicode/utf8_004.hs
-- buffer ends in 0xE0
à